src/skiacapi/cpp/skiacapi.h

CAPI unsigned char SkBlendMode_SrcATop(void);
CAPI unsigned char SkBlendMode_DstATop(void);
CAPI unsigned char SkBlendMode_Xor(void);
CAPI unsigned char SkBlendMode_Plus(void);
CAPI unsigned char SkBlendMode_Modulate(void);
CAPI unsigned char SkBlendMode_Screen(void);
CAPI unsigned char SkBlendMode_Overlay(void);
CAPI unsigned char SkBlendMode_Darken(void);