src/main/java/com/loadingbyte/cinecred/natives/skiacapi/skiacapi_h.java


        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcATop()
     * }
     */
    public static FunctionDescriptor SkBlendMode_SrcATop$descriptor() {
        return SkBlendMode_SrcATop.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcATop()
     * }
     */
    public static MethodHandle SkBlendMode_SrcATop$handle() {
        return SkBlendMode_SrcATop.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcATop()
     * }
     */
    public static MemorySegment SkBlendMode_SrcATop$address() {
        return SkBlendMode_SrcATop.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcATop()
     * }
     */
    public static byte SkBlendMode_SrcATop() {
        var mh$ = SkBlendMode_SrcATop.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_SrcATop");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_DstATop {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_DstATop");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstATop()
     * }
     */
    public static FunctionDescriptor SkBlendMode_DstATop$descriptor() {
        return SkBlendMode_DstATop.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstATop()
     * }
     */
    public static MethodHandle SkBlendMode_DstATop$handle() {
        return SkBlendMode_DstATop.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstATop()
     * }
     */
    public static MemorySegment SkBlendMode_DstATop$address() {
        return SkBlendMode_DstATop.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstATop()
     * }
     */
    public static byte SkBlendMode_DstATop() {
        var mh$ = SkBlendMode_DstATop.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_DstATop");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Xor {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Xor");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Xor()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Xor$descriptor() {
        return SkBlendMode_Xor.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Xor()
     * }
     */
    public static MethodHandle SkBlendMode_Xor$handle() {
        return SkBlendMode_Xor.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Xor()
     * }
     */
    public static MemorySegment SkBlendMode_Xor$address() {
        return SkBlendMode_Xor.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Xor()
     * }
     */
    public static byte SkBlendMode_Xor() {
        var mh$ = SkBlendMode_Xor.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Xor");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Plus {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Plus");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Plus()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Plus$descriptor() {
        return SkBlendMode_Plus.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Plus()
     * }
     */
    public static MethodHandle SkBlendMode_Plus$handle() {
        return SkBlendMode_Plus.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Plus()
     * }
     */
    public static MemorySegment SkBlendMode_Plus$address() {
        return SkBlendMode_Plus.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Plus()
     * }
     */
    public static byte SkBlendMode_Plus() {
        var mh$ = SkBlendMode_Plus.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Plus");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Modulate {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Modulate");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Modulate()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Modulate$descriptor() {
        return SkBlendMode_Modulate.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Modulate()
     * }
     */
    public static MethodHandle SkBlendMode_Modulate$handle() {
        return SkBlendMode_Modulate.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Modulate()
     * }
     */
    public static MemorySegment SkBlendMode_Modulate$address() {
        return SkBlendMode_Modulate.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Modulate()
     * }
     */
    public static byte SkBlendMode_Modulate() {
        var mh$ = SkBlendMode_Modulate.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Modulate");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Screen {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Screen");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Screen()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Screen$descriptor() {
        return SkBlendMode_Screen.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Screen()
     * }
     */
    public static MethodHandle SkBlendMode_Screen$handle() {
        return SkBlendMode_Screen.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Screen()
     * }
     */
    public static MemorySegment SkBlendMode_Screen$address() {
        return SkBlendMode_Screen.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Screen()
     * }
     */
    public static byte SkBlendMode_Screen() {
        var mh$ = SkBlendMode_Screen.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Screen");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Overlay {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Overlay");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Overlay()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Overlay$descriptor() {
        return SkBlendMode_Overlay.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Overlay()
     * }
     */
    public static MethodHandle SkBlendMode_Overlay$handle() {
        return SkBlendMode_Overlay.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Overlay()
     * }
     */
    public static MemorySegment SkBlendMode_Overlay$address() {
        return SkBlendMode_Overlay.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Overlay()
     * }
     */
    public static byte SkBlendMode_Overlay() {
        var mh$ = SkBlendMode_Overlay.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Overlay");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Darken {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Darken");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Darken()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Darken$descriptor() {
        return SkBlendMode_Darken.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Darken()
     * }
     */
    public static MethodHandle SkBlendMode_Darken$handle() {
        return SkBlendMode_Darken.HANDLE;
    }
